--- a/spec.html
+++ b/spec.html
@@ -5652,6 +5652,19 @@
       </emu-alg>
     </emu-clause>
 
+    <emu-clause id="sec-ifabruptcloseiterator" aoid="IfAbruptCloseIterator">
+      <h1>IfAbruptCloseIterator ( _value_, _iteratorRecord_ )</h1>
+      <p>IfAbruptCloseIterator is a shorthand for a sequence of algorithm steps that use an Iterator Record. An algorithm step of the form:</p>
+      <emu-alg>
+        1. IfAbruptCloseIterator(_value_, _iteratorRecord_).
+      </emu-alg>
+      <p>means the same thing as:</p>
+      <emu-alg>
+        1. If _value_ is an abrupt completion, return ? IteratorClose(_iteratorRecord_, _value_).
+        1. Else if _value_ is a Completion Record, set _value_ to _value_.[[Value]].
+      </emu-alg>
+    </emu-clause>
+
     <emu-clause id="sec-asynciteratorclose" aoid="AsyncIteratorClose">
       <h1>AsyncIteratorClose ( _iteratorRecord_, _completion_ )</h1>
       <p>The abstract operation AsyncIteratorClose takes arguments _iteratorRecord_ and _completion_. It is used to notify an async iterator that it should perform any actions it would normally perform when it has reached its completed state. It performs the following steps when called:</p>
@@ -31604,11 +31617,10 @@ THH:mm:ss.sss
               1. Let _nextValue_ be ? IteratorValue(_next_).
               1. If _mapping_ is *true*, then
                 1. Let _mappedValue_ be Call(_mapfn_, _thisArg_, &laquo; _nextValue_, 𝔽(_k_) &raquo;).
-                1. If _mappedValue_ is an abrupt completion, return ? IteratorClose(_iteratorRecord_, _mappedValue_).
-                1. Set _mappedValue_ to _mappedValue_.[[Value]].
+                1. IfAbruptCloseIterator(_mappedValue_, _iteratorRecord_).
               1. Else, let _mappedValue_ be _nextValue_.
               1. Let _defineStatus_ be CreateDataPropertyOrThrow(_A_, _Pk_, _mappedValue_).
-              1. If _defineStatus_ is an abrupt completion, return ? IteratorClose(_iteratorRecord_, _defineStatus_).
+              1. IfAbruptCloseIterator(_defineStatus_, _iteratorRecord_).
               1. Set _k_ to _k_ + 1.
           1. NOTE: _items_ is not an Iterable so assume it is an array-like object.
           1. Let _arrayLike_ be ! ToObject(_items_).
@@ -34324,11 +34336,11 @@ THH:mm:ss.sss
               1. Let _error_ be ThrowCompletion(a newly created *TypeError* object).
               1. Return ? IteratorClose(_iteratorRecord_, _error_).
             1. Let _k_ be Get(_nextItem_, *"0"*).
-            1. If _k_ is an abrupt completion, return ? IteratorClose(_iteratorRecord_, _k_).
+            1. IfAbruptCloseIterator(_k_, _iteratorRecord_).
             1. Let _v_ be Get(_nextItem_, *"1"*).
-            1. If _v_ is an abrupt completion, return ? IteratorClose(_iteratorRecord_, _v_).
-            1. Let _status_ be Call(_adder_, _target_, &laquo; _k_.[[Value]], _v_.[[Value]] &raquo;).
-            1. If _status_ is an abrupt completion, return ? IteratorClose(_iteratorRecord_, _status_).
+            1. IfAbruptCloseIterator(_v_, _iteratorRecord_).
+            1. Let _status_ be Call(_adder_, _target_, &laquo; _k_, _v_ &raquo;).
+            1. IfAbruptCloseIterator(_status_, _iteratorRecord_).
         </emu-alg>
         <emu-note>
           <p>The parameter _iterable_ is expected to be an object that implements an @@iterator method that returns an iterator object that produces a two element array-like object whose first element is a value that will be used as a Map key and whose second element is the value to associate with that key.</p>
@@ -34626,7 +34638,7 @@ THH:mm:ss.sss
             1. If _next_ is *false*, return _set_.
             1. Let _nextValue_ be ? IteratorValue(_next_).
             1. Let _status_ be Call(_adder_, _set_, &laquo; _nextValue_ &raquo;).
-            1. If _status_ is an abrupt completion, return ? IteratorClose(_iteratorRecord_, _status_).
+            1. IfAbruptCloseIterator(_status_, _iteratorRecord_).
         </emu-alg>
       </emu-clause>
     </emu-clause>
@@ -35059,7 +35071,7 @@ THH:mm:ss.sss
             1. If _next_ is *false*, return _set_.
             1. Let _nextValue_ be ? IteratorValue(_next_).
             1. Let _status_ be Call(_adder_, _set_, &laquo; _nextValue_ &raquo;).
-            1. If _status_ is an abrupt completion, return ? IteratorClose(_iteratorRecord_, _status_).
+            1. IfAbruptCloseIterator(_status_, _iteratorRecord_).
         </emu-alg>
       </emu-clause>
     </emu-clause>
